rust/rust_esprit/src/c_api/rn_cdc_c.rs

#![allow(dead_code)]
#![allow(unsafe_op_in_unsafe_fn)]
/* automatically generated by rust-bindgen 0.72.1 */

pub const _NEWLIB_VERSION: &[u8; 6] = b"4.3.0\0";
pub const _PICOLIBC_CTYPE_SMALL: u32 = 0;
pub const __HAVE_BUILTIN_COMPLEX: u32 = 1;
pub const __IO_DEFAULT: u8 = 100u8;
pub const __NEWLIB_MINOR__: u32 = 3;
pub const __NEWLIB_PATCHLEVEL__: u32 = 0;
pub const __NEWLIB_VERSION__: &[u8; 6] = b"4.3.0\0";
pub const __NEWLIB__: u32 = 4;
pub const __PICOLIBC_MINOR__: u32 = 8;
pub const __PICOLIBC_PATCHLEVEL__: u32 = 10;
pub const __PICOLIBC_VERSION__: &[u8; 7] = b"1.8.10\0";
pub const __PICOLIBC__: u32 = 1;
pub const _ATFILE_SOURCE: u32 = 1;
pub const _DEFAULT_SOURCE: u32 = 1;
pub const _ISOC99_SOURCE: u32 = 1;
pub const _ISOC11_SOURCE: u32 = 1;
pub const _ISOC23_SOURCE: u32 = 1;
pub const _POSIX_SOURCE: u32 = 1;
pub const _POSIX_C_SOURCE: u32 = 200809;
pub const _XOPEN_SOURCE: u32 = 700;
pub const _XOPEN_SOURCE_EXTENDED: u32 = 1;
pub const _LARGEFILE64_SOURCE: u32 = 1;
pub const __ATFILE_VISIBLE: u32 = 1;
pub const __BSD_VISIBLE: u32 = 1;
pub const __GNU_VISIBLE: u32 = 1;
pub const __ZEPHYR_VISIBLE: u32 = 0;
pub const __ISO_C_VISIBLE: u32 = 2023;
pub const __LARGEFILE_VISIBLE: u32 = 1;
pub const __LARGEFILE64_VISIBLE: u32 = 1;
pub const __MISC_VISIBLE: u32 = 1;
pub const __POSIX_VISIBLE: u32 = 202405;
pub const __SVID_VISIBLE: u32 = 1;
pub const __XSI_VISIBLE: u32 = 700;
pub const __SSP_FORTIFY_LEVEL: u32 = 0;
pub const __OBSOLETE_MATH_DEFAULT: u32 = 1;
pub const __OBSOLETE_MATH: u32 = 1;
pub const __OBSOLETE_MATH_FLOAT: u32 = 1;
pub const __OBSOLETE_MATH_DOUBLE: u32 = 1;
pub const __RAND_MAX: u32 = 2147483647;
pub const __have_longlong64: u32 = 1;
pub const __have_long32: u32 = 1;
pub const __SCHAR_WIDTH__: u32 = 8;
pub const __LONG_LONG_WIDTH__: u32 = 64;
pub const ___int8_t_defined: u32 = 1;
pub const ___int16_t_defined: u32 = 1;
pub const ___int32_t_defined: u32 = 1;
pub const ___int64_t_defined: u32 = 1;
pub const ___int_least8_t_defined: u32 = 1;
pub const ___int_least16_t_defined: u32 = 1;
pub const ___int_least32_t_defined: u32 = 1;
pub const ___int_least64_t_defined: u32 = 1;
pub const __HAVE_BUILTIN_ADD_OVERFLOW: u32 = 1;
pub const __HAVE_BUILTIN_ALLOCA: u32 = 1;
pub const __HAVE_BUILTIN_COPYSIGN: u32 = 1;
pub const __HAVE_BUILTIN_COPYSIGNL: u32 = 1;
pub const __HAVE_BUILTIN_CTZ: u32 = 1;
pub const __HAVE_BUILTIN_CTZL: u32 = 1;
pub const __HAVE_BUILTIN_CTZLL: u32 = 1;
pub const __HAVE_BUILTIN_FFS: u32 = 1;
pub const __HAVE_BUILTIN_FFSL: u32 = 1;
pub const __HAVE_BUILTIN_FFSLL: u32 = 1;
pub const __HAVE_BUILTIN_ISFINITE: u32 = 1;
pub const __HAVE_BUILTIN_ISINF: u32 = 1;
pub const __HAVE_BUILTIN_ISNAN: u32 = 1;
pub const __HAVE_BUILTIN_MUL_OVERFLOW: u32 = 1;
pub const __GNUCLIKE_PRAGMA_DIAGNOSTIC: u32 = 1;
pub const __int8_t_defined: u32 = 1;
pub const __int16_t_defined: u32 = 1;
pub const __int32_t_defined: u32 = 1;
pub const __int64_t_defined: u32 = 1;
pub const __int20: u32 = 2;
pub const __int20__: u32 = 2;
pub const __INT8: &[u8; 3] = b"hh\0";
pub const __INT16: &[u8; 2] = b"h\0";
pub const __INT64: &[u8; 3] = b"ll\0";
pub const __FAST8: &[u8; 3] = b"hh\0";
pub const __FAST16: &[u8; 2] = b"h\0";
pub const __FAST64: &[u8; 3] = b"ll\0";
pub const __LEAST8: &[u8; 3] = b"hh\0";
pub const __LEAST16: &[u8; 2] = b"h\0";
pub const __LEAST64: &[u8; 3] = b"ll\0";
pub const __int_least8_t_defined: u32 = 1;
pub const __int_least16_t_defined: u32 = 1;
pub const __int_least32_t_defined: u32 = 1;
pub const __int_least64_t_defined: u32 = 1;
pub const __int_fast8_t_defined: u32 = 1;
pub const __int_fast16_t_defined: u32 = 1;
pub const __int_fast32_t_defined: u32 = 1;
pub const __int_fast64_t_defined: u32 = 1;
pub const WINT_MIN: u32 = 0;
pub type __int8_t = cty::c_schar;
pub type __uint8_t = cty::c_uchar;
pub type __int16_t = cty::c_short;
pub type __uint16_t = cty::c_ushort;
pub type __int32_t = cty::c_int;
pub type __uint32_t = cty::c_uint;
pub type __int64_t = cty::c_longlong;
pub type __uint64_t = cty::c_ulonglong;
pub type __int_least8_t = cty::c_schar;
pub type __uint_least8_t = cty::c_uchar;
pub type __int_least16_t = cty::c_short;
pub type __uint_least16_t = cty::c_ushort;
pub type __int_least32_t = cty::c_int;
pub type __uint_least32_t = cty::c_uint;
pub type __int_least64_t = cty::c_longlong;
pub type __uint_least64_t = cty::c_ulonglong;
pub type __intmax_t = cty::c_longlong;
pub type __uintmax_t = cty::c_ulonglong;
pub type __intptr_t = cty::c_int;
pub type __uintptr_t = cty::c_uint;
pub type intmax_t = __intmax_t;
pub type uintmax_t = __uintmax_t;
pub type int_least8_t = __int_least8_t;
pub type uint_least8_t = __uint_least8_t;
pub type int_least16_t = __int_least16_t;
pub type uint_least16_t = __uint_least16_t;
pub type int_least32_t = __int_least32_t;
pub type uint_least32_t = __uint_least32_t;
pub type int_least64_t = __int_least64_t;
pub type uint_least64_t = __uint_least64_t;
pub type int_fast8_t = cty::c_schar;
pub type uint_fast8_t = cty::c_uchar;
pub type int_fast16_t = cty::c_short;
pub type uint_fast16_t = cty::c_ushort;
pub type int_fast32_t = cty::c_int;
pub type uint_fast32_t = cty::c_uint;
pub type int_fast64_t = cty::c_longlong;
pub type uint_fast64_t = cty::c_ulonglong;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lncdc_c {
    pub dummy: *mut cty::c_void,
}
pub type cdc_event_handler = ::core::option::Option<
    unsafe extern "C" fn(
        cookie: *mut cty::c_void,
        interface: cty::c_int,
        event: cty::c_int,
        payload: cty::c_uint,
    ),
>;
unsafe extern "C" {
    pub fn lncdc_create(instance: cty::c_uint) -> *mut lncdc_c;
}
unsafe extern "C" {
    pub fn lncdc_delete(arg1: *mut lncdc_c);
}
unsafe extern "C" {
    pub fn lncdc_read(arg1: *mut lncdc_c, buffer: *mut u8, maxSize: cty::c_int) -> cty::c_int;
}
unsafe extern "C" {
    pub fn lncdc_write(arg1: *mut lncdc_c, buffer: *const u8, maxSize: cty::c_int) -> cty::c_int;
}
unsafe extern "C" {
    pub fn lncdc_flush(arg1: *mut lncdc_c);
}
unsafe extern "C" {
    pub fn lncdc_clear_input_buffers(arg1: *mut lncdc_c);
}
unsafe extern "C" {
    pub fn lncdc_set_event_handler(
        arg1: *mut lncdc_c,
        h: cdc_event_handler,
        cookie: *mut cty::c_void,
    );
}
